fiddling with page

--- a/examples/gemchart/pages/gemchart.css
+++ b/examples/gemchart/pages/gemchart.css
@@ -1,416 +1,36 @@
-.style {
-    padding: 0px;
+.style{
+	padding:0px;
 }
-body {
-    -webkit-text-size-adjust: none;
-    background: #889098;
-    margin: 0px;
+body{
+	background:url('images/background.png') repeat-y left top;
+	background-size:100%;
 }
-div {
-    overflow: visible;
+div{
+	overflow:visible;
 }
-img {
-    border: none;
+.title{
+	color:#33aadd;
+	font-family:'HelveticaNeue-Light', 'Helvetica Neue', 'Arial', sans-serif;
+	font-size:36px;
+	margin:0px;
+	opacity:1.0;
+	padding:0px 20px;
+	text-align:left;
+	text-indent:0px;
+	text-transform:none;
 }
-a {
-    color: #003366;
-    text-decoration: none;
+table.graph{
+	width:100%;
+	height:500px;
+	color:black;
+	background-color:#eeeeee;
+	border-radius:6px;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border:solid #33aadd 1px;
+	border-collapse:separate;
+	margin:0px;
 }
-a:visited {
-    color: #336699;
-    text-decoration: none;
-}
-a:hover {
-    color: #bb0000;
-    text-decoration: none;
-}
-a.white:link {
-    color: #ffffff;
-}
-a.white:visited {
-    color: #ffffff;
-}
-a.white:hover {
-    color: #bb0000;
-}
-a.o:link {
-    color: #000000;
-}
-a.o:visited {
-    color: #000000;
-}
-a.o:hover {
-    color: #bb0000;
-}
-.title {
-    color: #33aadd;
-    font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 36px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 300;
-    letter-spacing: 0;
-    line-height: 30px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.0;
-    padding: 0px 20px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.label {
-    color: #33aadd;
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 14px;
-    font-style: italic;
-    font-weight: 300;
-    margin: 2px 2px 2px 24px;
-    opacity: 1.0;
-    padding: 0px 0px;
-    text-align: left;
-}
-.author {
-    color: #33aadd;
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 16px;
-    font-weight: 300;
-    margin: 2px 2px 2px 2px;
-    opacity: 1.0;
-    padding: 0px 0px;
-    text-align: left;
-}
-.back {
-    background: url('images/background.png') repeat-y left top;
-    background-position: 50% 0%;
-    opacity: 1.0;
-    padding: 16px 0px;
-}
-.upper {
-    background: url('images/upper.png') repeat-y;
-    width: 960px;
-    height: 24px;
-    border: 0px;
-    margin: 0px 0px;
-    padding: 0px 0px;
-    opacity: 1.0;
-}
-.upper_right {
-    background: #ffffff;
-    width: 64px;
-    height: 32px;
-    border: 0px;
-    margin: 0px 0px;
-    padding: 8px 8px;
-    opacity: 1.0;
-    border-top-right-radius: 8px;
-    -moz-box-shadow: 4px 4px 8px 1px #003366;
-    -webkit-box-shadow: 4px 4px 8px 1px #003366;
-    box-shadow: 8px 8px 8px 1px #003366;
-}
-.lower_right {
-    background: #ffffff;
-    width: 64px;
-    height: 32px;
-    border: 0px;
-    margin: 0px 0px;
-    padding: 8px 8px;
-    opacity: 1.0;
-    border-bottom-right-radius: 8px;
-    -moz-box-shadow: 4px 4px 8px 1px #003366;
-    -webkit-box-shadow: 4px 4px 8px 1px #003366;
-    box-shadow: 8px 8px 8px 1px #003366;
-}
-.right {
-    background: url('images/right.png') repeat-y;
-    width: 128px;
-    border: 0px;
-    margin: 0px 0px;
-    padding: 0px 8px;
-    opacity: 1.0;
-    vertical-align: top;
-}
-.lower {
-    background: url('images/lower.png') repeat-y;
-    width: 960px;
-    height: 24px;
-    border: 0px;
-    margin: 0px 0px;
-    padding: 0px 0px;
-    opacity: 1.0;
-}
-.paper {
-    background: #ffffff;
-    width: 816px;
-    border: 0px solid red;
-    margin: 0px 0px;
-    padding: 8px 8px;
-    opacity: 1.0;
-}
-.edged_paper {
-    background: #ffffff;
-    width: 880px;
-    border: 0px solid red;
-    margin: 0px 0px;
-    padding: 8px 8px;
-    opacity: 1.0;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
-    -moz-box-shadow: 4px 4px 8px 1px #003366;
-    -webkit-box-shadow: 4px 4px 8px 1px #003366;
-    box-shadow: 8px 8px 8px 1px #003366;
-}
-.intro_box {
-    background: #ffffff;
-    width: 768px;
-    border: 0px;
-    margin: 16px 0px;
-    padding: 0px 8px 8px 8px;
-    opacity: 1.0;
-}
-.content_box {
-    background: #ffffff;
-    width: 864px;
-    border: 0px;
-    margin: 8px 8px;
-    padding: 0px 0px 0px 0px;
-    opacity: 1.0;
-}
-.note_box {
-    background: #ffffff;
-    width: 768px;
-    border: 1px solid #99ccff;
-    margin: 16px 0px;
-    padding: 0px 8px 8px 8px;
-    opacity: 1.0;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-    -moz-box-shadow: 4px 4px 8px 1px #cccccc;
-    -webkit-box-shadow: 4px 4px 8px 1px #cccccc;
-    box-shadow: 4px 4px 8px 1px #cccccc;
-}
-.note_title {
-    color: #003366;
-    font-family: 'HelveticaNeue-Bold', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 24px;
-    font-weight: 600;
-    margin: 4px 0px 0px 0px;
-    text-align: left;
-}
-.note_date {
-    color: #003366;
-    font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 14px;
-    font-weight: 300;
-    margin: 4px 0px 0px 0px;
-    text-align: right;
-}
-.note_body {
-    color: #444444;
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 18px;
-    font-weight: 300;
-    margin: 0px 0px 0px 0px;
-    padding: 4px 8px;
-    text-align: left;
-}
-.note_label {
-    color: #000000;
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 16px;
-    font-weight: 600;
-    margin: 4px 0px 4px 0px;
-    padding: 0px 8px;
-    text-align: center;
-}
-.note_head {
-    color: #000000;
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 24px;
-    font-weight: 300;
-    margin: 0px 0px 0px 0px;
-    padding: 16px 0px 8px 0px;
-    text-align: left;
-}
-.note_head2 {
-    color: #000000;
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 20px;
-    font-weight: 300;
-    margin: 0px 0px 0px 0px;
-    padding: 12px 0px 0px 8px;
-    text-align: left;
-}
-.note_head3 {
-    color: #888888;
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 18px;
-    font-weight: 300;
-    margin: 0px 0px 0px 0px;
-    padding: 8px 0px 0px 8px;
-    text-align: left;
-}
-.note_image {
-    background: #ffffff;
-    width: 200px;
-    border: 0px;
-    margin: 4px 0px;
-    padding: 0px 0px 0px 0px;
-    opacity: 1.0;
-    text-align: center;
-}
-.note_graph {
-    background: #ffffff;
-    width: 200px;
-    border: 0px;
-    margin: 4px 0px;
-    padding: 0px 0px 0px 0px;
-    opacity: 1.0;
-    text-align: left;
-    vertical-align: top;
-}
-.big_o {
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 160px;
-    font-weight: 300;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px;
-    text-align: left;
-    letter-spacing: -10;
-}
-.little_o {
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 40px;
-    font-weight: 300;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px;
-    text-align: left;
-}
-.o_label {
-    color: #000000;
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 12px;
-    font-weight: 300;
-    margin: -45px 0px 10px 0px;
-    padding: 0px 0px;
-    text-align: left;
-}
-.archive {
-    color: #808080;
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 24px;
-    font-weight: 300;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 24px;
-    text-align: left;
-}
-.archive_back {
-    background: #ffffff;
-    width: 816px;
-    margin: 0px 0px;
-    padding: 0px 8px;
-    opacity: 1.0;
-}
-.archive_hr {
-    height: 1;
-}
-.contact {
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 24px;
-    font-weight: 300;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 32px;
-    text-align: right;
-}
-.top_links {
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 18px;
-    font-weight: 300;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 32px;
-}
-.bottom_links {
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 18px;
-    font-weight: 300;
-    margin: 8px 0px 0px 0px;
-    padding: 0px 32px;
-}
-.code_background {
-    background: #eeeeee;
-    width: 848px;
-    margin: 4px;
-    padding: 4px;
-}
-.console_background {
-    background: #ddeeff;
-    width: 848px;
-    margin: 4px;
-    padding: 4px;
-}
-.code {
-    font-family: 'Monaco', 'Courier', serif;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px;
-    margin: 0px;
-    padding: 0px 8px;
-    text-align: left;
-}
-table.summary {
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 16px;
-    color: #333333;
-    border-width: 1px;
-    border-color: #888888;
-    border-collapse: collapse;
-    margin: 4px 32px;
-}
-table.summary th {
-    border-width: 1px;
-    padding: 4px 16px;
-    border-style: solid;
-    border-color: #888888;
-    background-color: #dddddd;
-}
-table.summary td {
-    border-width: 1px;
-    padding: 4px 16px;
-    border-style: solid;
-    border-color: #888888;
-    background-color: #ffffff;
-}
-table.graph {
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 16px;
-    color: #333333;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #ffffff;
-    border-collapse: collapse;
-    margin: 4px 0px;
-}
-table.graph th {
-    border-width: 1px;
-    padding: 4px 0px;
-    border-style: solid;
-    border-color: #ffffff;
-}
-table.graph td {
-    border-width: 1px;
-    padding: 4px 0px;
-    border-style: solid;
-    border-color: #ffffff;
-}
-
-.Normal {
-    padding: 0px;
-}
-div.paragraph {
-    position: relative;
+div.paragraph{
+	position:relative;
 }
