--- a/examples/gemchart/pages/gemchart.css
+++ b/examples/gemchart/pages/gemchart.css
@@ -23,8 +23,8 @@ table.graph{
 	width:100%;
 	height:500px;
 	color:black;
-	background-color:#eeeeee;
-	border-radius:6px;
+	background-color:#ffffff;
+	border-radius:8px;
 	-moz-border-radius:6px;
 	-webkit-border-radius:6px;
 	border:solid #33aadd 1px;
