--- a/examples/gemchart/pages/gemchart.css
+++ b/examples/gemchart/pages/gemchart.css
@@ -31,11 +31,23 @@ table.graph{
 	border-collapse:separate;
 	margin:0px;
 }
+table.button-table{
+	width:100%;
+	border:0px;
+	padding:0px;
+	border-collapse:collapse;
+	margin:0px;
+}
+td.button-td{
+	width:15%;
+	border:0px;
+	padding:20px 10px 0px 10px;
+}
 div.paragraph{
 	position:relative;
 }
 .button{
-	width:152px;
+	width:100%;
 	height:30px;
 	color:black;
 	font-size:18px;
@@ -45,5 +57,13 @@ div.paragraph{
 	-webkit-border-radius:6px;
 	border:0px;
 	border-collapse:collapse;
-	margin:20px 6px 0px 6px;
+	margin:0px;
 }
+.hidden{
+	color:#33aadd;
+	font-family:'HelveticaNeue-Light', 'Helvetica Neue', 'Arial', sans-serif;
+	height="1";
+	width="10";
+	font-size:10px;
+}
+
